--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
-    "seed": "^0.4.4",
     "sequelize": "^6.20.1"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "seed": "node seeds/index.js"
   },
   "name": "mvc-techblog",
   "description": "",
